--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="tech watch">
+        <nav>
+          <h1>Tech News</h1>
+          <a href="#top">Home</a>
+          <a href="#top">About</a>
+          <a href="#events">Events</a>
+          <a href="#merch">Merch</a>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
