images now up and arranged. now for the content!

--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
   </head>
   <body>
     <header>
-      <div class="tech watch">
-        <nav>
-          <h1>Tech News</h1>
-          <a href="#top">Home</a>
-          <a href="#top">About</a>
-          <a href="#events">Events</a>
-          <a href="#merch">Merch</a>
-        </nav>
-      </div>
+      <h1>Tech News</h1>
+      <nav>
+        <a href="#top">Home</a>
+        <a href="#top">About</a>
+        <a href="#events">Events</a>
+        <a href="#merch">Merch</a>
+      </nav>
     </header>
+    <main>
+      <section id="watch" class="background-image watch-background">
+        <!-- add content to watch page -->
+      </section>
+      <section id="car" class="background-image car-background">
+        <!-- add content to car page  -->
+      </section>
+      <section id="human" class="background-image human-background">
+        <!-- add content to car page -->
+      </section>
+    </main>
   </body>
 </html>
