added a box for main content

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </header>
     <main>
       <section id="watch" class="background-image watch-background">
+        <div class="top-box">
+          <h2 class="top-box_header">Welcome to the Future</h2>
+          <p class="top-box_content">
+            blablablablablabalablablabalbalablablabalbalablablabalblabalablablablabalblablablablablablabalablablabalbalablablabalbalablablabalblabalablablablabalblablablablablablabalablablabalbalablablabalbalablablabalblabalablablablabalbla
+          </p>
+        </div>
         <!-- add content to watch page -->
       </section>
       <section id="car" class="background-image car-background">
